--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+.font-permament-market {
+  font-family: 'Permanent Marker', cursive;
+}
 .flex {
   display: flex;
 }
